--- a/index.qmd
+++ b/index.qmd
@@ -4,19 +4,63 @@ title: "Pingfan's Slides"
 
 ```{r}
 library(tidyverse)
-library(tinytable)
 library(googlesheets4)
+library(htmltools)
+library(commonmark)
 
 gs4_deauth()
-slides_data <- read_sheet("1WISHM4Y0kp12QAsXMRt3KhE9mQ18ofpNSUzz6V82tU8") %>% 
-  mutate(
-    Slides = '<i class="bi bi-file-earmark-slides"></i>',
-    PDF = '<i class="bi bi-file-earmark-pdf"></i>'
-  )
-slides_table <- tt(slides_data, escape = FALSE)
+slides_data <- read_sheet("1WISHM4Y0kp12QAsXMRt3KhE9mQ18ofpNSUzz6V82tU8")
 
-slides_table %>% 
-  format_tt(markdown = TRUE)
+# Function to convert markdown to HTML
+render_markdown <- function(text) {
+  HTML(markdown_html(text))
+}
 
+# Functions to construct paths
+make_slides_path <- function(folder_name) {
+  file.path("/slides", folder_name)
+}
+
+make_pdf_path <- function(folder_name) {
+  paste0(file.path("/pdf", folder_name), ".pdf")
+}
+
+# Create presentations using HTML tags
+presentations <- slides_data %>%
+  pmap(function(Date, Title, Event, Location, Directory) {
+    div(
+      class = "presentation-box",
+      div(
+        class = "presentation-content",
+        div(class = "presentation-title", Title),
+        div(
+          class = "presentation-details",
+          div(class = "event-location", render_markdown(Event)),
+          div(class = "presentation-date", format(Date, "%B %d, %Y"))
+        )
+      ),
+      div(
+        class = "presentation-icons",
+        a(
+          href = make_slides_path(Directory),
+          class = "presentation-button",
+          target = "_blank",
+          rel = "noopener noreferrer",
+          tags$i(class = "bi bi-file-earmark-slides"),
+          span("Slides")
+        ),
+        a(
+          href = make_pdf_path(Directory),
+          class = "presentation-button",
+          target = "_blank",
+          rel = "noopener noreferrer",
+          tags$i(class = "bi bi-file-earmark-pdf"),
+          span("PDF")
+        )
+      )
+    )
+  })
+
+# Render all presentations
+div(class = "presentations-container", presentations)
 ```
-
