--- a/slides/2025_gw_ospo/index.qmd
+++ b/slides/2025_gw_ospo/index.qmd
@@ -19,8 +19,6 @@ format:
       data-background-size: 20%
       data-background-opacity: "1"
       class: custom-title-slide
-shortcodes:
-  - surveycode.lua
 execute: 
   warning: false
   echo: false
@@ -32,11 +30,8 @@ execute:
 library(tidyverse)
 library(kableExtra)
 library(googlesheets4)
+source("codes.R")
 ```
-
-## slide1
-
-{{< surveycode >}}
 
 ## [What do we want from a survey platform?]{style="text-align: center"} {.center}
 
@@ -113,16 +108,6 @@ An **R script** defining the survey Shiny app. It sets up the database and serve
 
 :::
 
-
-
-
-
-
-
-
-
-
-
 ## {style="font-size: 0.6em;"}
 
 ::: columns
@@ -135,54 +120,10 @@ file
 :::
 
 ::: {.column width="43%"}
-
-````{r}
-#| eval: false
-#| echo: true
-
----
-format: html
-echo: false
-warning: false
----
-
 ```{r}
-library(surveydown)
+#| results: 'asis'
+surveycode()
 ```
-
-::: {#welcome .sd-page}
-
-# Welcome to our survey!
-
-```{r}
-sd_question(
-  type  = 'mc',
-  id    = 'penguins',
-  label = "What's your favorite penguin?",
-  option = c(
-    'Adélie'    = 'adelie',
-    'Chinstrap' = 'chinstrap',
-    'Gentoo'    = 'gentoo'
-  )
-)
-
-sd_next()
-```
-
-:::
-
-::: {#end .sd-page}
-
-This is the last page of the survey.
-
-```{r}
-sd_close()
-```
-
-:::
-
-````
-
 :::
 
 ::: {.column width="43%"}
@@ -203,13 +144,6 @@ Load Package
 
 :::
 
-
-
-
-
-
-
-
 ## {style="font-size: 0.6em;"}
 
 ::: columns
@@ -223,59 +157,16 @@ file
 
 ::: {.column width="43%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "11,30,32,40"
-
----
-format: html
-echo: false
-warning: false
----
-
 ```{r}
-library(surveydown)
+#| results: 'asis'
+surveycode("11,30,32,40")
 ```
-
-::: {#welcome .sd-page}
-
-# Welcome to our survey!
-
-```{r}
-sd_question(
-  type  = 'mc',
-  id    = 'penguins',
-  label = "What's your favorite penguin?",
-  option = c(
-    'Adélie'    = 'adelie',
-    'Chinstrap' = 'chinstrap',
-    'Gentoo'    = 'gentoo'
-  )
-)
-
-sd_next()
-```
-
-:::
-
-::: {#end .sd-page}
-
-This is the last page of the survey.
-
-```{r}
-sd_close()
-```
-
-:::
-
-````
 
 :::
 
 ::: {.column width="43%"}
 
-Define pages uses "fences" (`:::`)
+Define pages using "fences" (`:::`)
 
 ::: {.surveyqmd-texts style="display: block; transform: none; top: 24%;"}
 
@@ -293,18 +184,6 @@ Page 2 (End)
 
 :::
 
-
-
-
-
-
-
-
-
-
-
-
-
 ## {style="font-size: 0.6em;"}
 
 ::: columns
@@ -318,53 +197,10 @@ file
 
 ::: {.column width="43%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "13-28"
-
----
-format: html
-echo: false
-warning: false
----
-
 ```{r}
-library(surveydown)
+#| results: 'asis'
+surveycode("13-28")
 ```
-
-::: {#welcome .sd-page}
-
-# Welcome to our survey!
-
-```{r}
-sd_question(
-  type  = 'mc',
-  id    = 'penguins',
-  label = "What's your favorite penguin?",
-  option = c(
-    'Adélie'    = 'adelie',
-    'Chinstrap' = 'chinstrap',
-    'Gentoo'    = 'gentoo'
-  )
-)
-
-sd_next()
-```
-
-:::
-
-::: {#end .sd-page}
-
-This is the last page of the survey.
-
-```{r}
-sd_close()
-```
-
-:::
-
-````
 
 :::
 
@@ -380,77 +216,29 @@ Contents of Page 1
 
 :::
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-## `survey.qmd` {.smaller}
+## {style="font-size: 0.6em;"}
 
 ::: columns
-::: {.column width="50%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "9-16"
-```{r}
-library(surveydown)
-```
+::: {.column width="14%"}
 
-::: {#welcome .sd-page}
-# Welcome to our survey!
-
-```{r}
-sd_question(
-  type   = 'mc',
-  id     = 'penguins',
-  label  = "Which penguin do you like?",
-  option = c('Adélie'    = 'adelie',
-             'Chinstrap' = 'chinstrap',
-             'Gentoo'    = 'gentoo')
-)
-
-sd_next()
-```
-:::
-
-::: {#end .sd-page}
-This is the last page of the survey.
-
-```{r}
-sd_close()
-```
-:::
-````
+survey.qmd 
+file
 
 :::
 
-::: {.column width="50%"}
-::: {.surveyqmd-texts style="display: block; transform: none; top: 40%;"}
+::: {.column width="43%"}
+
+```{r}
+#| results: 'asis'
+surveycode("16-25")
+```
+
+:::
+
+::: {.column width="43%"}
+
+::: {.surveyqmd-texts style="display: block; transform: none; top: 36%;"}
 Question Definition
 :::
 :::
@@ -461,33 +249,10 @@ Question Definition
 ::: columns
 ::: {.column width="50%"}
 
-````{r}
-#| eval: false
-#| echo: true
-# Load Package
-library(surveydown)
-
-# Database Credentials
-sd_db_config()
-# Connect to Database
-db <- sd_db_connect()
-
-# Server Setup
-server <- function(input, output, session) {
-
-  # Skip logic
-  sd_skip_if(...)
-
-  # Conditional display
-  sd_show_if(...)
-
-  # Server settings
-  sd_server(...)
-}
-
-# Launch Survey
-shiny::shinyApp(ui = sd_ui(), server = server)
-````
+```{r}
+#| results: 'asis'
+appcode()
+```
 
 :::
 
@@ -515,34 +280,10 @@ Launch Survey
 ::: columns
 ::: {.column width="50%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "1-2"
-# Load Package
-library(surveydown)
-
-# Database Credentials
-sd_db_config()
-# Connect to Database
-db <- sd_db_connect()
-
-# Server Setup
-server <- function(input, output, session) {
-
-  # Skip logic
-  sd_skip_if(...)
-
-  # Conditional display
-  sd_show_if(...)
-
-  # Server settings
-  sd_server(...)
-}
-
-# Launch Survey
-shiny::shinyApp(ui = sd_ui(), server = server)
-````
+```{r}
+#| results: 'asis'
+appcode("1-2")
+```
 
 :::
 
@@ -558,34 +299,10 @@ Load Package
 ::: columns
 ::: {.column width="50%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "4-7"
-# Load Package
-library(surveydown)
-
-# Database Credentials
-sd_db_config()
-# Connect to Database
-db <- sd_db_connect()
-
-# Server Setup
-server <- function(input, output, session) {
-
-  # Skip logic
-  sd_skip_if(...)
-
-  # Conditional display
-  sd_show_if(...)
-
-  # Server settings
-  sd_server(...)
-}
-
-# Launch Survey
-shiny::shinyApp(ui = sd_ui(), server = server)
-````
+```{r}
+#| results: 'asis'
+appcode("4-7")
+```
 
 :::
 
@@ -605,34 +322,10 @@ We recommend using **Supabase** or any **PostgreSQL** database for the database 
 ::: columns
 ::: {.column width="50%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "9-20"
-# Load Package
-library(surveydown)
-
-# Database Credentials
-sd_db_config()
-# Connect to Database
-db <- sd_db_connect()
-
-# Server Setup
-server <- function(input, output, session) {
-
-  # Skip logic
-  sd_skip_if(...)
-
-  # Conditional display
-  sd_show_if(...)
-
-  # Server settings
-  sd_server(...)
-}
-
-# Launch Survey
-shiny::shinyApp(ui = sd_ui(), server = server)
-````
+```{r}
+#| results: 'asis'
+appcode("9-23")
+```
 
 :::
 
@@ -648,39 +341,15 @@ Server Setup
 ::: columns
 ::: {.column width="50%"}
 
-````{r}
-#| eval: false
-#| echo: true
-#| code-line-numbers: "22-23"
-# Load Package
-library(surveydown)
-
-# Database Credentials
-sd_db_config()
-# Connect to Database
-db <- sd_db_connect()
-
-# Server Setup
-server <- function(input, output, session) {
-
-  # Skip logic
-  sd_skip_if(...)
-
-  # Conditional display
-  sd_show_if(...)
-
-  # Server settings
-  sd_server(...)
-}
-
-# Launch Survey
-shiny::shinyApp(ui = sd_ui(), server = server)
-````
+```{r}
+#| results: 'asis'
+appcode("25-26")
+```
 
 :::
 
 ::: {.column width="50%"}
-::: {.surveyqmd-texts style="display: block; transform: none; top: 70%;"}
+::: {.surveyqmd-texts style="display: block; transform: none; top: 77%;"}
 Launch Survey
 :::
 :::
